insertamos sass en index

--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -29,7 +29,7 @@
         </a>
         <a href="">
             <div class="contenedor">
-                <img src="" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Sass_Logo_Color.svg/2560px-Sass_Logo_Color.svg.png" alt="sass logo png">
                 <h3>Sass</h3>
             </div>
         </a>
