insertamos gsap en index

--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -35,7 +35,7 @@
         </a>
                 <a href="">
             <div class="contenedor">
-                <img src="" alt="">
+                <img src="https://cdn.worldvectorlogo.com/logos/gsap-greensock.svg" alt="gsap logo png">
                 <h3>GSAP</h3>
             </div>
         </a>
