--- a/luca384/Pracatica5/index.html
+++ b/luca384/Pracatica5/index.html
@@ -23,44 +23,48 @@
             <p>1. Selector Universal</p>
             <p>Un metroidvania de exploración en un mundo oscuro y misterioso lleno de insectos y criaturas. Destaca por su jugabilidad precisa, ambientación melancólica y dificultad desafiante.</p>
 
-            <img src= "imagenes/selector 1.png" alt="Imagen de videojuegos" width="450px">
+            <img src= "imagenes/selector 1.png" alt="Imagen de selector" width="350px">
+            <img src= "imagenes/ejemplo 1.png" alt="Imagen de ejemplo" width="350px">
 
             <p>2. Selector de Tipo</p> 
             <p>Un hack and slash inspirado en La Divina Comedia. Acompañas a Dante en su viaje por los nueve círculos del infierno enfrentando demonios y jefes grotescos, con una estética intensa y cargada de simbolismo religioso.</p>
 
-            <img src="imagenes/selector 2.png" alt="Imagen de videojuegos" width="300px">
+            <img src="imagenes/selector 2.png" alt="Imagen de selector" width="300px">
+            <img src= "imagenes/ejemplo 2.png" alt="Imagen de ejemplo" width="350px">
 
             <p>3. Selector por ID</p>
             <p>Un metroidvania con toques de soulslike, ambientado en un mundo sombrío inspirado en el arte y la religión española. Combina acción brutal, escenarios inquietantes y una atmósfera cargada de penitencia y sufrimiento.</p>
 
-            <img src="imagenes/selector 3.png" alt="Imagen de videojuegos" width="350px"> 
+            <img src="imagenes/selector 3.png" alt="Imagen de selector" width="350px"> 
+            <img src= "imagenes/ejemplo 37.png" alt="Imagen de ejemplo" width="350px">
 
             <p>4. Selector por Clase</p>
             <p>Un metroidvania de exploración en un mundo oscuro y misterioso lleno de insectos y criaturas. Destaca por su jugabilidad precisa, ambientación melancólica y dificultad desafiante.</p>
 
-            <img src= "imagenes/selector 4.png" alt="Imagen de videojuegos" width="450px">
+            <img src= "imagenes/selector 4.png" alt="Imagen de selector" width="350px">
+            <img src= "imagenes/ejemplo 458.png" alt="Imagen de ejemplo" width="350px">
 
             <p>5. Selector por un tag en particular</p> 
             <p>Un hack and slash inspirado en La Divina Comedia. Acompañas a Dante en su viaje por los nueve círculos del infierno enfrentando demonios y jefes grotescos, con una estética intensa y cargada de simbolismo religioso.</p>
-            <img src="imagenes/selector 5.png" alt="Imagen de videojuegos" width="300px">
+            <img src="imagenes/selector 5.png" alt="Imagen de selector" width="300px">
+            <img src= "imagenes/ejemplo 458.png" alt="Imagen de ejemplo" width="350px">
 
             <p>6. Selector por Atributo</p>
             <p>Un metroidvania con toques de soulslike, ambientado en un mundo sombrío inspirado en el arte y la religión española. Combina acción brutal, escenarios inquietantes y una atmósfera cargada de penitencia y sufrimiento.</p>
 
-            <img src="imagenes/selector 6.png" alt="Imagen de videojuegos" width="350px"> 
+            <img src="imagenes/selector 6.png" alt="Imagen de selector" width="350px"> 
+            <img src= "imagenes/ejemplo 6.png" alt="Imagen de ejemplo" width="350px">
 
             <p>7. Selector por Lista</p> 
             <p>Un hack and slash inspirado en La Divina Comedia. Acompañas a Dante en su viaje por los nueve círculos del infierno enfrentando demonios y jefes grotescos, con una estética intensa y cargada de simbolismo religioso.</p>
-            <img src="imagenes/selector 7.png" alt="Imagen de videojuegos" width="300px">
+            <img src="imagenes/selector 7.png" alt="Imagen de selector" width="300px">
+            <img src= "imagenes/ejemplo 37.png" alt="Imagen de ejemplo" width="350px">
 
             <p>8. elector Compuesto</p>
             <p>Un metroidvania con toques de soulslike, ambientado en un mundo sombrío inspirado en el arte y la religión española. Combina acción brutal, escenarios inquietantes y una atmósfera cargada de penitencia y sufrimiento.</p>
 
-            <img src="imagenes/selector 8.png" alt="Imagen de videojuegos" width="350px"> 
-
-            <ul>
-                <li><a href="index.html">Pagina Principal</a></li>
-            </ul>
+            <img src="imagenes/selector 8.png" alt="Imagen de selector" width="350px"> 
+            <img src= "imagenes/ejemplo 458.png" alt="Imagen de ejemplo" width="350px">
 
         </article>
 </body>
