--- a/luca384/index.html
+++ b/luca384/index.html
@@ -39,6 +39,13 @@
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=luca384&since=2025-09-03&until=2025-09-03">Commit del cambio del link</a></li>
         </ul>
 
+        <h2>Practica 5:Uso de los selectores en css </h2>
+        <p>En esta practica modificamos el link de nuestra pagina personal con css</p>
+        <ul class="links">
+            <li><a href="Pracatica5/index.html">Pagina de Selectores</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=luca384&since=2025-09-03&until=2025-09-03">Commits</a></li>
+        </ul>
+
     </header>
 
     <footer>© 2025 Pagina de Practicas - Todos los derechos reservados Política de privacidad</footer>
