--- a/TheRafaMan06/index.html
+++ b/TheRafaMan06/index.html
@@ -54,6 +54,13 @@
                 <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/Practica5/index.html', '_blank')">Pagina Solicitiado</button>
                 <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-09-08&until=2025-09-10', '_blank')">Commits</button>
             </div>
+            <div class="caja">
+                <h2>Practica 6</h2>
+                <p>Utilizando flexbox, cree un documento HTML donde se diseñe una copia de una imagen que nos paso el profesor</p>
+
+                <button class="boton outline" onclick="window.open('Practica6/index.html', '_blank')">Link Pagina</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-09-10&until=2025-09-12', '_blank')">Commits</button>
+            </div>
         </div>
     </main>
     <footer>Hecho por Abdiel Rafael Aguilar Linares</footer>
