--- a/aaronrdzr/practica6/index.html
+++ b/aaronrdzr/practica6/index.html
@@ -7,16 +7,27 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>Practica 6</h1>
-    <hr>
-    <h2>FlexBox</h2>
-    <hr class="hr2">
+    <header>
+        <h1>Practica 6</h1>
+        <hr>
+        <h2>FlexBox</h2>
+        <hr class="hr2">
+    </header>
+   <main>
     <section class="s1">
-        <div class="cajas"><img src="img/react2.png" alt="Logo REACT"></div>
-        <div class="cajas"><img src="img/vue2.png" alt="Logo VUE"></div>
-        <div class="cajas"><img src="img/tailwind.png" alt="Logo TAILWIND"></div>
-        <div class="cajas"><img src="img/sass2.png" alt="Logo SASS"></div>
-        <div class="cajas"><img src="img/gsap2.png" alt="Logo GSAP"></div>
+        <div class="cajas"><img src="img/react2.png" alt="Logo REACT" width="175" height="200"></div>
+        <div class="cajas"><img src="img/vue2.png" alt="Logo VUE" width="175" height="200"></div>
+        <div class="cajas"><img src="img/tailwind.png" alt="Logo TAILWIND" width="175" height="200"></div>
+        <div class="cajas"><img src="img/sass2.png" alt="Logo SASS" width="175" height="200"></div>
+        <div class="cajas"><img src="img/gsap2.png" alt="Logo GSAP" width="175" height="200"></div>
+
     </section>
-</body>
+    </main>
+    <aside></aside>
+    <footer>
+        <hr class="hr3">
+        <a href="mailto:aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a>
+        <h3>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</h3>
+    </footer>
+    </body>
 </html>
