--- a/gfuelinme/selectores/index.html
+++ b/gfuelinme/selectores/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pagina principal">
-    <meta name="keywords" content="Fútbol, Música, Lectura, Cine">
+    <meta name="description" content="Uso de selectores en CSS">
+    <meta name="keywords" content="Programacion, Web, HTML, CSS, JavaScript, Django">
     <meta name="author" content="Jorge Ignacio Salazar Mares">
     <link rel="stylesheet" href="style.css">
     <title>Selectores</title>
