--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -25,7 +25,7 @@
         <p>En esta primera practica realicé una página web en donde se integro información sobre 4 de mis pasatiempos aplicando un commit para cada uno. 
         Se utilizaron las etiquetas: meta, title, header, main,footer, article, section, img y p. 
         Y se aplicaron estilos sencillos como color de texto, fondo y borde utilizando un archivo externo css.</p>
-    <section class="links">
+        <section class="links">
             <h2>Links solicitados</h2>
             <ul>
                 <li><a href="https://github.com/IlseOjeda/Practica-1">Repositorio</a></li>
@@ -35,16 +35,16 @@
         </section>
         <h2>Evidencia 2</h2>
         <p>En esta práctica realicé mi carpeta personal en la organización y dentro de la misma agregué un archivo llamado index.html.</p>
-    <section class="links">
+        <section class="links">
             <h2>Links solicitados</h2>
             <ul>
                 <li><a href="https://github.com/FDW52AD2025/website52/blob/main/IlseOjeda/index.html">Página personal</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-20&until=2025-08-22">Commits</a></li>
-            </ul>
+        </ul>
         </section>
         <h2>Evidencia 3</h2>
         <p>Está practica se baso en realizar la versión 2 sobre mis pasatiempos, pero esta vez guardando en la organización y utilizando 5 archivos html para la información de los pasatiempos. En cada documento html utilicé etiquetas de estructura (header,nav, main,aside,footer) y las nuevas etiquetas del material de clase.</p>
-    <section class="links">
+        <section class="links">
             <h2>Links solicitados</h2>
             <ul>
                 <li><a href="pasatiemposv2/index.html">Página pasatiempos versión 2</a></li>
@@ -54,22 +54,30 @@
         </section>
         <h2>Evidencia 4</h2>
         <p>En esta evidencia apliqué un estilo personalizado a mi link de la página principal de la organización agregando un link css en la sección head del archivo index.</p>
-    <section class="links">
+        <section class="links">
             <h2>Links solicitados</h2>
             <ul>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-01&until=2025-09-03">Commits 01 al 03 de agosto</a></li>
             </ul>
         </section> 
-        </section>
         <h2>Evidencia 5</h2>
         <p>En esta practica utilicé los archivos HTML sobre mis pasatiempos versión 2 y creé un sitio donde se muestra por lo menos un ejemplo de cada selector CSS</p>
-    <section class="links">
+        <section class="links">
             <h2>Links solicitados</h2>
             <ul>
                 <li><a href="Practica 5/index.html">Página selectores</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-08&until=2025-09-10">Commits</a></li>
             </ul>
-        </section>             
+        </section>   
+        <h2>Evidencia 6</h2>
+        <p>Para esta evidencia utilizando flexbox, creé un documento HTML donde se diseñe lo que se muestra en la imagen de la pagina codepen.io.</p>
+        <section class="links">
+            <h2>Links solicitados</h2>
+            <ul>
+                <li><a href="practica_6/index.html">Página diseño solicitado</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-10&until=2025-09-12">Commits</a></li>
+            </ul>
+        </section>           
     </main>
     <footer> 
         <p>Desarrollado por Ilse Ojeda 
