Pagina principal actualizada

--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -83,8 +83,8 @@
             En esta sexta practica se utilizo flexbox y se creo un documento HTML en donde se realizo un diseño.
         </p>
         <ul>
-            <li><a href="">Pagina Diseño Solicitado</a></li>
-            <li><a href="">Commits</a></li>
+            <li><a href="https://fdw52ad2025.github.io/website52/NerickRamirez/Practica6/index.html">Pagina Diseño Solicitado</a></li>
+            <li><a href="http://github.com/FDW52AD2025/website52/commits?author=NerickRamirez&since=2025-09-10&until=2025-09-12">Commits</a></li>
         </ul>
         <h2>Fechas</h2>
         <p>Del 10 al 12 de septiembre del 2025</p>
