descripcion, titulo, modificación de css a index de evidencias además del botón volver

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -108,6 +108,25 @@
         
                 <p>Del lunes 8 de septiembre al miércoles 10 de septiembre.</p>
     </section>
+
+    <!-- Sección de práctica 6 -->
+    <section>
+        <header>
+            <h2>Práctica 6</h2>
+        </header>
+    <!-- Descripción de la práctica 6 -->    
+        <p>En esta práctica nos encargamos de crear una página en la que usaremos flexbox acomodando diferentes contenedores.</p>
+    <!-- Links práctica 6 -->    
+            <h2> LINKS </h2>
+                <ul class="links">
+                <li><a href="practica6/index.html">Página con flexbox</a></li>
+                <li><a href="">Link de commits</a></li>
+                </ul>
+            <img src="practica6/img/practica6.png" alt="">
+    <!-- Fecha de elaboración de práctica 6 -->
+            <h2> Fechas de elaboración de la práctica</h2>
+                <p>Del miercoles 10 al viernes 12 de septiembre.</p>
+    </section>
     
     <footer class="main-footer">
         <p>© 2025 - Fernando Nicolás Molina Ramírez</p>
