--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilo_flexbox.css">
     <title>Práctica 6 - Fernando Nicolas Molina Ramirez</title>
 </head>
 <body>
+        <h1 class="header">Práctica 6</h1>
+        <p class="header-p">Utilizando flexbox, cree un documento HTML donde se muestren secciones usando flexbox.</p>
+
     <section id="contendor-boards">
         <div  class="contenedores">
         <a href="">
@@ -41,9 +44,15 @@
         </a>
         </div>
     </section>
+    <nav class="boton">
+            <div>
+                <button onclick="history.back();">VOLVER</button>
+            </div>
+    </nav>
 
-    <footer class="main-footer">
+    <footer class="pie">
         <p>© 2025 - Fernando Nicolás Molina Ramírez</p>
     </footer>
+
 </body>
 </html>
