--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -12,31 +12,31 @@
 
     <section id="contendor-boards">
         <div  class="contenedores">
-        <a href="https://es.react.dev">
+        <a href="https://es.react.dev" target="_blank">
             <div class="contenedor">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1150px-React-icon.svg.png" alt="logo react">
                 <h3>React</h3>
             </div>
         </a>
-        <a href="https://vuejs.org">
+        <a href="https://vuejs.org" target="_blank">
             <div class="contenedor">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/2367px-Vue.js_Logo_2.svg.png" alt="vue logo png">
                 <h3>Vue</h3>
             </div>
         </a>
-        <a href="https://tailwindcss.com">
+        <a href="https://tailwindcss.com" target="_blank">
             <div class="contenedor">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/2560px-Tailwind_CSS_Logo.svg.png" alt="logo tailwind png">
                 <h3>Tailwind</h3>
             </div>
         </a>
-        <a href="https://sass-lang.com">
+        <a href="https://sass-lang.com" target="_blank">
             <div class="contenedor">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Sass_Logo_Color.svg/2560px-Sass_Logo_Color.svg.png" alt="sass logo png">
                 <h3>Sass</h3>
             </div>
         </a>
-        <a href="https://gsap.com">
+        <a href="https://gsap.com" target="_blank">
             <div class="contenedor">
                 <img src="https://cdn.worldvectorlogo.com/logos/gsap-greensock.svg" alt="gsap logo png">
                 <h3>GSAP</h3>
@@ -46,7 +46,7 @@
     </section>
     <nav class="boton">
             <div>
-                <button onclick="history.back();">VOLVER</button>
+                    <button onclick="history.back();">VOLVER</button>
             </div>
     </nav>
 
