Se agrego la seccion de la practica 6 en la pagina principal

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -212,6 +212,34 @@
                     <footer></footer>
                 </section>
 
+                <section>
+                    <header>
+                        <h3>Práctica 6</h3>
+                    </header>
+
+                    <p>
+                        Utilizando flexbox, cree un documento HTML donde se
+                        diseñe lo que se muestra en la imagen siguiente.
+                    </p>
+
+                    <p>Fecha commits: 10 al 12 de Septiembre.</p>
+
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#" target="_blank">
+                                    Link Página Diseño solicitado:
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank">Link Commits:</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <footer></footer>
+                </section>
+
                 <footer>
                     <p>Desarrollado por Juan Antonio</p>
                 </footer>
