--- a/CarlosPortalesM/index.html
+++ b/CarlosPortalesM/index.html
@@ -38,8 +38,15 @@
 
         <h2>Práctica 5 - Links</h2>
         <p>En esta quinta práctica modifiqué mi pagina de pasatiemposver2 usando selectores</p>
-        <li>Página de selectores<a href="https://fdw52ad2025.github.io/website52/CarlosPortalesM/practica4/index.html" target="_blank">Página de selectores</a></li>
+        <li>Página de selectores <a href="https://fdw52ad2025.github.io/website52/CarlosPortalesM/practica4/index.html" target="_blank">Página de selectores</a></li>
         <li>Commits del 8 al 10 de septiembre <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-09-08&until=2025-09-10" target="_blank">Link de commits del 8 al 10 de septiembre</a></li>
+
+        <h2>Práctica 6 - Links</h2>
+        <p>En esta sexta práctica recreé el diseño de la pagina CodePen con flex</p>
+        <li>Página de diseño <a href="https://fdw52ad2025.github.io/website52/CarlosPortalesM/practica6/index.html" target="_blank">Página diseño</a></li>
+        <li>Página commits del 10 al 12 de septiembre <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-09-10&until=2025-09-12" target="_blank">Página commits del 10 al 12 de septiembre</a></li>
+
+    </main>
     </main>
     <aside>
 
