--- a/EddMont/Practica6/index.html
+++ b/EddMont/Practica6/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programacion con flexbox</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <header><h1>Diseño ccon flexbox</h1></header>
