Se realizo la practica 6 ademas de modificar mi index principal

--- a/danielvm216/index.html
+++ b/danielvm216/index.html
@@ -42,6 +42,13 @@
             <li><a href="https://github.com/FDW52AD2025/website52/commits?author=danielvm216&since=2025-09-01&until=2025-09-03">Commits 1/09/2025 al 3/09/2025s</a></li>
         </article>
         
+        <h2>Evidencia 6</h2>
+        <p>Se replico una imagen sobre un menu de una pagina web usando flexbox</p>
+        <article>
+            <li><a href="p6/index.html">Pagina creada</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits?author=danielvm216&since=2025-09-10&until=2025-09-12">Commits</a></li>
+        </article>
+        
 
 
 
