Se agregaron los enlaces a la practica 6

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -227,12 +227,19 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="#" target="_blank">
+                                <a
+                                    href="./practica6/index.html"
+                                    target="_blank"
+                                >
                                     Link Página Diseño solicitado:
                                 </a>
                             </li>
                             <li>
-                                <a href="#" target="_blank">Link Commits:</a>
+                                <a
+                                    href="https://github.com/FDW52AD2025/website52/commits/main/?author=atchz&since=2025-09-10&until=2025-09-12"
+                                    target="_blank"
+                                    >Link Commits:</a
+                                >
                             </li>
                         </ul>
                     </nav>
