Se adjuntaron los enlaces de la práctica 6 a la página de las Evs

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="practica-6/imgs/img-logo.jpg" type="image/png"> 
     <link rel="stylesheet" href="estilos.css">
-    <title>Mis Evidencias 😁👍</title>
+    <title>Mis Evidencias-Hugo</title>
 </head>
 <body class="c-background">
     <header class="first-header">
@@ -21,7 +22,7 @@
 
             <section class="section">
                 <header id="no-practica">
-                    <h2>Practica 1</h2>
+                    <h2>Práctica 1</h2>
                 </header>
                 <p>Para esta práctica se creó un documento HTML en el que redacte un artículo acerca de mis pasatiempos personales, haciendo uso de las etiquetas básicas vistas en clase, tales como <i>meta, title, header, main, footer, article, section, img y p</i>. Además, se incluyó un archivo CSS para darle un diseño más presentable a la página, y realice un commit por cada pasatiempo desarrollado, teniendo un total de cuatro commits. </p>
                 <ul>
@@ -41,7 +42,7 @@
                 </nav>
                 <hr>
                 <header id="no-practica">
-                    <h2>Practica 2</h2>
+                    <h2>Práctica 2</h2>
                 </header>
                 <p>Para esta práctica se creó una carpeta personal en la organización del gpo 52 y se agregó un archivo llamado <i>index.html</i> en el que se adjuntarán todas las evidencias de aprendizaje.</p>
                 <p>Fecha de los commits: 20 al 22 de Agosto.</p>
@@ -54,7 +55,7 @@
                 </nav>
                 <hr>
                 <header id="no-practica">
-                    <h2>Practica 3</h2>
+                    <h2>Práctica 3</h2>
                 </header>
                 <p>Para esta actividad modificaremos la Práctica 1 (la página de los pasatiempos personales que desarrolle en mi repositorio personal), esto con el objetivo de crear una segunda versión en la que utilizaremos las etiquetas vistas recientemente en clase, pero esta vez se guardará en la organización del gpo 52. En este caso, usaremos cinco archivos HTML para colocar cada uno de los pasatiempos, incluyendo un archivo CSS para los estilos.</p>
                 <p>Fecha de los commits: 27 al 29 de Agosto.</p>
@@ -68,7 +69,7 @@
                 </nav>
                 <hr>
                 <header id="no-practica">
-                    <h2>Practica 4</h2>
+                    <h2>Práctica 4</h2>
                 </header>
                 <p>Para esta actividad, lo que hice fue aplicarle un estilo personalizado a mi boton personal de la página de la organización del gpo 52.</p>
                 <p>Fecha de los commits:  1 al 3 de Septiembre.</p>
@@ -80,9 +81,21 @@
                 </nav>
                 <hr>
                 <header id="no-practica">
-                    <h2>Practica 5</h2>
+                    <h2>Práctica 5</h2>
                 </header>
-                <p>Tomando como base a la Practica 3 (la segunda versión de "Mis pasatiempos"), crearemos un sitio en donde se muestren las capturas de cada selector CSS que se implentaron en la práctica antes mencionada.</p>
+                <p>Tomando como base a la Practica 3 (la segunda versión de "Mis pasatiempos"), crearemos un sitio en donde se muestren las capturas de cada selector CSS implementados en la práctica antes mencionada.</p>
+                <ul>
+                    <li>Selector universal</li>
+                    <li>Selector de tipo</li>
+                    <li>Selector por ID</li>
+                    <li>Selector por clase</li>
+                    <li>Selector de atributo</li>
+                    <li>Selector de lista</li>
+                    <li>Selector de descendientes</li>
+                    <li>Selector hijos directos</li>
+                    <li>Selector hermano adyacente</li>
+                    <li>Selector hermano general</li>
+                </ul>
                 <p>Fecha de los commits: 8 al 10 de Septiembre.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
@@ -93,7 +106,7 @@
                 </nav>
                 <hr>
                 <header id="no-practica">
-                    <h2>Practica 6</h2>
+                    <h2>Prática 6</h2>
                 </header>
                 <p>En esta práctica crearemos un documento HTML (utilizando flexbox) en donde se diseñará lo que se muestra en la siguiente imagen:</p>
                 <figure>
@@ -103,8 +116,8 @@
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul>
-                        <li><a target="_blank" href="">PAGINA HTML(no esta listo)</a></li>
-                        <li><a target="_blank" href="">LINK DE LOS COMMITS (no esta listo)</a></li>
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/practica-6/index.html">PAGINA DE LA PRACTICA</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-10&until=2025-09-12&author=Hugo-0699">LINK DE LOS COMMITS </a></li>
                     </ul>
                 </nav>
                 <hr>    
