--- a/AscuOnTop/Practica 6/index.html
+++ b/AscuOnTop/Practica 6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practca 6</title>
     <link rel="stylesheet" href="csspractica6.css">
 </head>
 <body>
