--- a/AscuOnTop/index.html
+++ b/AscuOnTop/index.html
@@ -41,7 +41,13 @@
             <div class="dropdown">
                 <h1>Practica 4</h1>
                 <div class="dropdown-contenido">
-                    <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-01&until=2025-09-03&author=AscuOnTop"></a>
+                    <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-01&until=2025-09-03&author=AscuOnTop">Commits 1/09/2025 al 3/09/2025</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <h1>Practica 6</h1>
+                <div class="dropdown-contenido">
+                    <a href="Practica 6\index.html">Mi pagina</a>
                 </div>
             </div>
             </div>
