Agrego link practica 6

--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -106,6 +106,19 @@
                 </ul>
             </article>
         </section>
+        <section>
+            <hr>
+            <h1>Practica 6</h1>
+            <p>Utilizando flexbox, cree un documento HTML donde se diseñe lo que se muestra en la imagen siguiente.</p>
+            <br>
+            <article>
+                <h2>Links de la practica</h2>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/practica 6/index.html">Link Pagina</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-09-10&until=2025-09-12">Link commits 10 al 12 de septiembre</a></li>
+                </ul>
+            </article>
+        </section>
     </main>
     <aside>
     </aside>
