arreglo link erroneo

--- a/1jecc/index.html
+++ b/1jecc/index.html
@@ -33,7 +33,7 @@
 
         <div class="box">
             <h2 class="h2">Práctica 5</h2>
-            <a class="a" href="https:/fdw52ad2025.github.io/website52/1jecc/practica_5/p5.html">Página selectores.</a>
+            <a class="a" href="https://fdw52ad2025.github.io/website52/1jecc/practica_5/p5.html">Página selectores.</a>
             <a class="a" href="https://github.com/FDW52AD2025/website52/commits/main/?author=1jecc&since=2025-09-08&until=2025-09-10">Link de los commits.</a>
         </div>
 
