--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="aaronrdzr/css/estilos.css" />
         <link rel="stylesheet" href="Marikve7/style.css" />
         <link rel="stylesheet" href="Bere-ops/CSS/estilos.css" />
-        <link rel="stylesheet" href="gfuelinme/css/estilos.css" />
+        <link rel="stylesheet" href="gfuelinme/enlace/style.css" />
         <link rel="stylesheet" href="Marikve7/style.css" />
         <link rel="stylesheet" href="Bejesusrey/EstilosCss/styles.css" />
         <link rel="stylesheet" href="ernesgarcia06/css/estilos.css">
