--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="victoriabalderas/CSS/estilos.css">
         <link rel="stylesheet" href="NerickRamirez/estilos2.css">
         <link rel="stylesheet" href="oswtobias06/css/estilos.css">
-        <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
+        <link rel="stylesheet" href="Hugo-0699/boton-css/estilos.css">
         <link rel="stylesheet" href="aLe.php27/estilosindex.css">
         <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
         <link rel="stylesheet" href="AscuOnTop/cssnombre/nombre.css">
