--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -12,14 +12,14 @@
     </header>
     <main>
         <h1>Práctica 1</h1>
-        <p>En esta práctica pusimos en prueba los conocimientos vistos en la clase del 18-08, de acuerdo a la Evidencia 1.</p>
+        <p>En esta práctica pusimos en prueba los conocimientos vistos en la clase del 18-08, para crear nuestra propia página web.</p>
         <ul>
             <li><a href="https://github.com/Bere-ops/Practica_1.git">Repositorio de GitHub</a></li>
             <li><a href="https://github.com/Bere-ops/Practica_1/commits/main/?since=2025-08-14&until=2025-08-15">Commits realizados</a></li>
             <li><a href="https://bere-ops.github.io/Practica_1/">Página web</a></li>
         </ul>
         <h2>Fecha de los commits</h2>
-        <p>14 al 15 de agosto</p>
+        <p>13 al 15 de agosto</p>
 
         <hr>
 
@@ -64,7 +64,7 @@
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-08&until=2025-09-09&author=Bere-ops">Commits</a></li>
         </ul>
         <h2>Fecha de los commits: </h2>
-        <p> 1 al 3 de Septiembre.</p>
+        <p> 8 al 10 de Septiembre.</p>
 
         <hr>
 
