Error corregido en los enlaces de la página de las Evs e implementación de botones

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -34,7 +34,7 @@
                 <p>Fecha de los commits: 13 al 15 de Agosto.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
-                    <ul>
+                    <ul id="boton">
                         <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1.git">REPOSITORIO PERSONAL DE GIT HUB</a></li>
                         <li><a target="_blank" href="https://hugo-0699.github.io/Practica-1/">SITIO PUBLICADO</a></li>
                         <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">COMMITS DEL RESPOSITORIO PERSONAL</a></li>
@@ -48,9 +48,9 @@
                 <p>Fecha de los commits: 20 al 22 de Agosto.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
-                    <ul>
-                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/index.html">PERFIL PERSONAL</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DEL RESPOSITORIO DE LA ORGANIZACION</a></li>
+                    <ul id="boton">
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/index.html">PERFIL PERSONAL DE LA ORGANIZACIÓN</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DEL RESPOSITORIO DE LA ORGANIZACIÓN</a></li>
                     </ul>
                 </nav>
                 <hr>
@@ -61,10 +61,10 @@
                 <p>Fecha de los commits: 27 al 29 de Agosto.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
-                    <ul>
-                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/pasatiemposmod/index.html">SEGUNDA VERSION DE "MIS PASATIEMPOS"</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-27">LINK DE LOS COMMITS DE LA CLASE DEL 27 DE AGOSTO</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-29">LINK DE TODOS LOS COMMITS</a></li>
+                    <ul id="boton">
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/practica-3">V2.0 DE "MIS PASATIEMPOS"</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-27">COMMITS DE LA CLASE DEL 27/08/2025</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-29">TODOS LOS COMMITS</a></li>
                     </ul>
                 </nav>
                 <hr>
@@ -75,8 +75,8 @@
                 <p>Fecha de los commits:  1 al 3 de Septiembre.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
-                    <ul>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-09-01&until=2025-09-02">LINK DE LOS COMMITS</a></li>
+                    <ul id="boton">
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-09-01&until=2025-09-02">TODOS LOS COMMITS</a></li>
                     </ul>
                 </nav>
                 <hr>
@@ -99,9 +99,9 @@
                 <p>Fecha de los commits: 8 al 10 de Septiembre.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
-                    <ul>
-                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/selectores_css/index.html">PAGINA DE LOS SELECTORES EN CSS DE LA V2 DE "MIS PASATIEMPOS"</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-08&until=2025-09-10&author=Hugo-0699">LINK DE LOS COMMITS</a></li>
+                    <ul id="boton">
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/practica-5/index.html">PÁGINA DE LOS SELECTORES EN CSS DE LA V2.0 DE "MIS PASATIEMPOS"</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-08&until=2025-09-10&author=Hugo-0699">TODOS LOS COMMITS</a></li>
                     </ul>
                 </nav>
                 <hr>
@@ -110,14 +110,14 @@
                 </header>
                 <p>En esta práctica crearemos un documento HTML (utilizando flexbox) en donde se diseñará lo que se muestra en la siguiente imagen:</p>
                 <figure>
-                    <center><img src="pasatiemposmod/imagenes/practica6_img.png" alt=""></center>
+                    <center><img src="practica-6/imgs/practica6_img.png" alt=""></center>
                 </figure>
                 <p>Fecha de los commits: 10 al 12 de Septiembre.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
-                    <ul>
-                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/practica-6/index.html">PAGINA DE LA PRACTICA</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-10&until=2025-09-12&author=Hugo-0699">LINK DE LOS COMMITS </a></li>
+                    <ul id="boton">
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/practica-6/index.html">PÁGINA CON EL DISEÑO SOLICITADO</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-10&until=2025-09-12&author=Hugo-0699">TODOS LOS COMMITS </a></li>
                     </ul>
                 </nav>
                 <hr>    
