--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -53,7 +53,7 @@
                 <p>En esta practica se mejoró la página web estatica realizada en la Practica 1.</p>
                 <ul>
                     <li>
-                        <a href="https://fdw52ad2025.github.io/website52/gfuelinme/pasatiemposv2/index.html" target="_blank">Página web</a>
+                        <a href="https://fdw52ad2025.github.io/website52/gfuelinme/pasatiempos/index.html" target="_blank">Página web</a>
                     </li>
                     <li>
                         <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-08-27&until=2025-08-27" target="_blank">Commits en clase</a>
@@ -70,6 +70,32 @@
                 <ul>
                     <li>
                         <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-09-02&until=2025-09-02" target="_blank">Commits</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>Practica 5</h3>
+                <p>Realizada el 10 de septiembre del 2025.</p>
+                <p>En esta practica usamos selectores en CSS para modificar la página de pasatiempos.</p>
+                <ul>
+                    <li>
+                        <a href="https://fdw52ad2025.github.io/website52/gfuelinme/pasatiempos/index.html" target="_blank">Página web</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-09-10&until=2025-09-10">Commits</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>Practica 6</h3>
+                <p>Realizada el 12 de septiembre del 2025.</p>
+                <p>En esta practica utilizamos flexbox para replicar un diseño.</p>
+                <ul>
+                    <li>
+                        <a href="https://fdw52ad2025.github.io/website52/gfuelinme/flexbox/index.html">Página web</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-09-12&until=2025-09-12">Commits</a>
                     </li>
                 </ul>
             </section>
