Añado práctica 6 a mi portafolio. El commit anterior fue para la práctica 5

--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -121,8 +121,26 @@
                 </footer>
             </section>
 
+            <h2>Práctica 6</h2>
 
+            <section>
+                <header>
+                    <h3>Se presenta el link que corresponde a los commits práctica 6.</h3>
+                </header>
 
+                <!-- desarrollo -->
+
+                <li>
+                    <a href="p6/index.html">Link de la página con el diseño solicitado</a>
+                </li>
+                
+                <li>
+                    <a href="https://github.com/FDW52AD2025/website52/commits/main/ErickLTI?since=2025-09-10&until=2025-09-12">Commits del día 09/10/25 - 09/12/25</a>
+                </li>
+                <footer>
+                    <p>Práctica realizada entre 08 y 14 de Septiembre del año 2025</p>
+                </footer>
+            </section>
         </article>
     </main>
     <aside></aside>
