--- a/SEUNGKWANCHEL/index.html
+++ b/SEUNGKWANCHEL/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evidencias</title>
+    <title>Document</title>
 </head>
 <body>
-    <h2>Evidencias de desarrollo web</h2>
+    
 </body>
 </html>
