cambio de index principal

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -77,7 +77,7 @@
                 <ul>
                     <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/pasatiempos2/index2.html">Link de página pasatiempos 2</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-08-26&until=2025-08-27">Link de commits en clase</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7">Link de commits</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-08-27&until=2025-08-29">Link de commits</a></li>
                 </ul>
 
                 <h4>Fecha commits</h4>
