agregando detalles extra para la evidencia

--- a/KingBootleg/index.html
+++ b/KingBootleg/index.html
@@ -68,6 +68,7 @@
             <p>Pequeña práctica donde creamos unos rápidos botones:</p>
             <ul>
                 <li><a href="https://github.com/KingBootleg/practica-6/commit/16fd0542dced2b44dfbfd5dca32b937dfdaeffb0">Commit</a></li>
+                <li><a href="https://kingbootleg.github.io/practica-6/">Pagina de los botones</a></li>
             </ul>
         </section>
     </main>
