--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -47,6 +47,14 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=IanStiglitz&since=2025-09-01&until=2025-09-03">Commits</a></li>
             </ul>
         </ul>
+
+        <ul>
+        <h2>Practica 5: Selector CSS</h2>
+        <p>Utilizando sus archivos HTML sobre sus pasatiempos versión 2. Crear un sitio donde se muestre por lo menos un ejemplo de cada selector CSS.</p>
+            <ul>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=IanStiglitz&since=2025-09-08&until=2025-09-10">Commits</a></li>
+            </ul>
+        </ul>
     </main>
     <aside></aside>
     <footer></footer>
