--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -19,6 +19,7 @@
             <h2> LINKS</h2>
 
                 <ul class="links">
+                    <li><a href="https://f-rn-ndo.github.io/practicaEv1/indexEv.html">Página práctica 1 publicada</a></li>
                     <li><a href="https://github.com/F-rn-ndo/practicaEv1">Repositorio de practicaEv1</a></li>
                     <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/indexEv.html">Archivo HTML</a></li>
                     <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/estilo.css">Archivo CSS</a></li>
