--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -32,7 +32,7 @@
         <p>En está práctica se creo una carpeta personal en la organziación y dentro de la organización y dentro la misma se agrego un archivo llamado index.html</p>
 
         <h2>Link</h2>
-        <li> <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=MiguelABanda&since=2025-08-20&until=2025-08-22">Links de los commits</a></li>
+        <li> <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=MiguelABanda&since=2025-08-20&until=2025-08-22">Commits </a></li>
         <li> <a href="https://fdw52ad2025.github.io/website52/MiguelABanda/index.html"> Página de las evidenicas </a></li>
 
         <h1>Practica 3</h1>
