se termina hasta la evidencia 1

--- a/ivanmane/index.html
+++ b/ivanmane/index.html
@@ -67,7 +67,7 @@
         <section>
             <h2>Practica 2</h2>
             <a href="index.html">Repositorio</a>
-            <a href="">Commits 20 al 22 de agosto</a>
+            <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-08-20&until=2025-08-22&author=ivanmane">Commits 20 al 22 de agosto</a>
         </section>
         <section>
             <h2>Practica 3<h2>
@@ -78,17 +78,12 @@
         </section>
         <section>
             <h2>Practica 4</h2>
-            <a href="">commits 1 al 3 de septiembre</a>
-        </section>
-        <section>
-            <h2>Practica 5</h2>
-            <a href="">Pagina de selectores</a>
-            <a href="">Commits del 8 al 10 de septiembre</a>
+            <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-01&until=2025-09-03&author=ivanmane">commits 1 al 3 de septiembre</a>
         </section>
         <section>
             <h2>Practica 6</h2>
             <a href="Practica 6/practica6.html">Link de pagina con diseño</a>
-            <a href="">Commits del 10 al 12 de septiembre</a>
+            <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-10&until=2025-09-12&author=ivanmane">Commits del 10 al 12 de septiembre</a>
         </section>
     </main>
 </body>
