--- a/ivanmane/index.html
+++ b/ivanmane/index.html
@@ -82,7 +82,7 @@
         </section>
         <section>
             <h2>Practica 6</h2>
-            <a href="Practica 6/practica6.html">Link de pagina con diseño</a>
+            <a href="Practica 6/practica6.html">Link de pagina con diseños</a>
             <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-10&until=2025-09-12&author=ivanmane">Commits del 10 al 12 de septiembre</a>
         </section>
     </main>
