--- a/AscuOnTop/PRACTICA 3/deportes.html
+++ b/AscuOnTop/PRACTICA 3/deportes.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <a href="index.html">Inicio</a>
-                <a href="musica.html">🎵 Música ></a>
-                <a href="deportes.html">⚽ Deporte</a>
+                <a href="musica.html">🎵 Música</a>
+                <a href="deportes.html">⚽ Deporte ></a>
                 <a href="videojuegos.html">🎮 Videojuegos</a>
                 <a href="anime.html">🎬 Anime</a>
             </ul>
@@ -26,12 +26,12 @@
 
     <!-- Presentación principal -->
         <section class="presentacion">
-            <h2>Mi muscia</h2>
-            <p>Hablando sobre mis gustos musicales la verdad es que son muy diversos, y escucho depende el momento en el que ande, pero normalmente lo que mas escucho es trap, artistas como bad bunny, Anuel, Luar la L, Eladio carrion etc. Ademas de esos artistas y canciones otro genero al que soy muy apegado son a los corridos tumbatos, artistas como nata, junior h y asi, escucho mas tipos de generos pero siento yo que esos dos son con los que mas me identifico</p>
-            <p>CONCIERTO DE ELADIO Y CONCIERTO DE NATA</p>
-            <img src="Assets\NataYaTe.jpg" alt="YateOlvide">
-            <img src="Assets\Natact.jpg" alt="Natanael">
-            <img src="Assets\EladioCarr.jpg" alt="EladdioCarrion">
+            <h2>Mi deporte</h2>
+            <p>Hablando de deportes mi deporte favorito es el futbol, aunque ultimamente tambien me empezo a gustar el baseball, como uno de mis equipos favoritos del futbol es el real madrid y claramente mi mayor referente de ese deporte y se podria decir que idolo mio es el gran comandante cristiano ronaldo.</p>
+            <p></p>
+            <img src="Assets\Realmadrid.webp" alt="Real Madrid">
+            <img src="Assets\CR7.webp" alt="CR7l">
+
         </section>
 
     <!-- Lateral derecho -->
