--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <a href="ernesgarcia06/index.html">ernesgarcia06 </a>
                     </li>
                     <li id="a17">
-                        <a href="SEUNGKWANCHEL/index.html">SEUNGKWANCHEL </a>
+                        <a href="index.html">SEUNGKWANCHEL </a>
                     </li>
                     <li id="a18"><a href="Marikve7/index.html">Marikve7</a></li>
                     <li id="a19">
