--- a/BernaGaspar/PasatiemposV2/index.html
+++ b/BernaGaspar/PasatiemposV2/index.html
@@ -29,7 +29,7 @@
             <div><img src="img/Futbol.jpg"></div>
             <div>
                 <ul>
-                    <li><a href="">Ver mas...</a></li>
+                    <li><a href="pasatiempo1.html">Ver mas...</a></li>
                     <li><a href="#h_i">Volver a arriba</a></li>
                 </ul>
             </div>
@@ -41,7 +41,7 @@
             <div><img src="img/HombresG.jpg"></div>
             <div>
                 <ul>
-                    <li><a href="">Ver mas...</a></li>
+                    <li><a href="pasatiempo2.html">Ver mas...</a></li>
                     <li><a href="#h_i">Volver a arriba</a></li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
             <div><img src="img/Fundidora.png"></div>
             <div>
                 <ul>
-                    <li><a href="">Ver mas...</a></li>
+                    <li><a href="pasatiempo3.html">Ver mas...</a></li>
                     <li><a href="#h_i">Volver a arriba</a></li>
                 </ul>
             </div>
@@ -65,7 +65,7 @@
             <div><img src="img/Dibujar1.jpg"></div>
             <div>
                 <ul>
-                    <li><a href="">Ver mas...</a></li>
+                    <li><a href="pasatiempo4.html">Ver mas...</a></li>
                     <li><a href="#h_i">Volver a arriba</a></li>
                 </ul>
             </div>
@@ -77,7 +77,7 @@
             <div><img src="img/Videojuegos3.png"></div>
             <div>
                 <ul>
-                    <li><a href="">Ver mas...</a></li>
+                    <li><a href="pasatiempo5.html">Ver mas...</a></li>
                     <li><a href="#h_i">Volver a arriba</a></li>
                 </ul>
             </div>
@@ -194,7 +194,7 @@
     </main>
 
     <aside id="a_i">
-        <a href="index.html">Volver a la pagina organizacional</a>
+        <a href="https://fdw52ad2025.github.io/website52/BernaGaspar/index.html">Volver a la pagina de evidencias</a>
     </aside>
 
     <footer id="f_i">
