--- a/BernaGaspar/index.html
+++ b/BernaGaspar/index.html
@@ -43,6 +43,30 @@
             </ul>
         </article>
 
+        <article>
+            <h2>Practica 3:</h2>
+            <p>Modificar la página pasatiempos que desarrollo en su cuenta personal. Está practica consiste en realizar la versión 2 sobre sus pasatiempos, pero esta vez se tiene que guardar en la organización. Se solicita que utilice 5 archivos html para la información de sus pasatiempos. En cada documento html utilice etiquetas de estructura (header,nav, main,aside,footer).</p>
+            <p>Se deben agregar nuevas etiquetas de las paginas 23,27, 29, 30,31,32 del material de clase.</p>
+            <p>Dentro del nuevo sitio diseñe algún formulario (form).</p>
+            <p>Fecha commits: 27 al 29 de Agosto.</p>
+            <p>Links:</p>
+            <ul>
+                <li><section id="s1">Link Pagina pasatiempos version 2: <a id="a1" href="https://youtube.com" target="_blank">Link</a></section></li>
+                <li><section id="s2">Link Commits trabajo en clase 27 de agosto: <a id="a2" href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-08-27&until=2025-08-27" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-08-27&until=2025-08-27</a></section></li>
+                <li><section id="s3">Link Commits: <a id="a3" href="https://github.com/BernaGaspar/Evidencia-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-08-27&until=2025-08-29</a></section></li>
+            </ul>
+        </article>
+
+        <article>
+            <h2>Practica 4:</h2>
+            <p>plicar estilo personalizado a su link de la página principal de la organización. Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).</p>
+            <p>Fecha commits: 1 al 3 de Septiembre.</p>
+            <p>Link:</p>
+            <ul>
+                <li><section id="s1">Link Commits: <a id="a1" href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-09-01&until=2025-09-03" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-09-01&until=2025-09-03</a></section></li>
+            </ul>
+        </article>
+
     </main>
 
     <footer>
