--- a/BernaGaspar/index.html
+++ b/BernaGaspar/index.html
@@ -51,7 +51,7 @@
             <p>Fecha commits: 27 al 29 de Agosto.</p>
             <p>Links:</p>
             <ul>
-                <li><section id="s1">Link Pagina pasatiempos version 2: <a id="a1" href="https://github.com/FDW52AD2025/website52/blob/main/BernaGaspar/index.html" target="_blank">https://github.com/FDW52AD2025/website52/blob/main/BernaGaspar/index.html</a></section></li>
+                <li><section id="s1">Link Pagina pasatiempos version 2: <a id="a1" href="https://youtube.com" target="_blank">Link</a></section></li>
                 <li><section id="s2">Link Commits trabajo en clase 27 de agosto: <a id="a2" href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-08-27&until=2025-08-27" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-08-27&until=2025-08-27</a></section></li>
                 <li><section id="s3">Link Commits: <a id="a3" href="https://github.com/BernaGaspar/Evidencia-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-08-27&until=2025-08-29</a></section></li>
             </ul>
